# app_lensblur

./: CMakeLists.txt  README.md
apps/dehazing/: CMakeLists.txt
apps/depthoffield/: CMakeLists.txt
apps/tonemapping/: tonemapping.cc
denseLabeling/: CMakeLists.txt  denseLabeling.cpp
example/: rocas_20.sp
filters/: filter.h  filterdehazing.h  filterdepthoffield.h  filtertonemapping.h
gui/: brushableimage.h  imageformats.h  imagemousebrush.h  labelimage.h  widgetfilter.h  windowfilter.h
include/: least-squares-linear-system2.h
lib/: libvl.dylib
lib/IML++/: qmr.h
libs/: depthoffielddefocus.cc  depthoffielddefocus.h  imageHDR.cpp  imageHDR.h  least-squares-linear-system2.h
libs/dehazing/: dehazing.cc  dehazing.h
libs/tonemapping/: tonemapping.cc  tonemapping.h
src/: gridButtons.h  image-widget.h  imagelabel.cpp  imageviewer2.cc  labelimage.h  main.cc  mythread.cpp  mythread.h  widgetFocus.h
src/Nsuperpixels/: superpixel.cpp  superpixel.h  superpixels.cpp  superpixels.h  test_superpixels.cpp
src/apps/dehazing/: dehazing.cc
src/apps/depthoffield/: depthoffield.cc
src/apps/tonemapping/: CMakeLists.txt  tonemapping.cc
src/dehaz/: CMakeLists.txt  gridButtons.h  imageviewer2.cc  mythread.cpp  mythread.h  widgetFocus.h  widgetImage.h
src/denseLabeling/: CMakeLists.txt  denseLabeling.cpp  main_denseLabeling.cpp
src/dof/: CMakeLists.txt  imageviewer2.cc  imageviewer2.h  labelimage.h  mythread.h  widgetFocus.h
src/filters/: filter.h  filterdehazing.h  filterdepthoffield.h  filtertonemapping.h  filtertonemappingcolor.h  filtertonemappingmantiuk.h
src/gui/: imageformats.h  multiimageviewer.h  widgetfilter.h  windowfilter.h
src/superpixels/: CMakeLists.txt  main_superpixels.cpp  superpixel.h  superpixels.cpp  superpixels.h  test_superpixels.cpp
src/tonemapping/: CMakeLists.txt  gridButtons.h  imagelabel.h  imageviewer2.cc  imageviewer2.h  labelimage.h  mythread.cpp  widgetImage.h
superpixels/: CMakeLists.txt  labelSet.cpp  superpixels.cpp
